layout bug fixes
Fixed a bunch of layout issues that were causing display problems on smaller screens, reworked admin visuals to match the front end, fixed an iissue that was causing 'unsafe' errors when leaving the admin page due to chrome thinking some of the characters from fields with preloaded data might be used for doing something malicious to the database - weird issue, never seen it before and it probably would be wise to keep an eye out for similar problems with other fields

--- a/Backup/StaghornSite v2/styles.css
+++ b/Backup/StaghornSite v2/styles.css
@@ -43,6 +43,16 @@ table tr:nth-child(odd) {
 .container1 {
     background-color:darkolivegreen;
     border-radius: 15px 15px 15px 15px;
+
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    flex-direction: column;
+}
+
+.container2 {
+    border-radius: 15px 15px 15px 15px;
+    background-color:darkseagreen;
 }
 
 .button {
@@ -66,3 +76,45 @@ table tr:nth-child(odd) {
 .whiteText {
     color:white;
 }
+
+.blackText {
+    color:black;
+}
+
+.equal-test {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    flex-direction: column;
+}
+
+.equal-test1 {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    flex-direction: row;
+    flex-item-align:center;
+}
+
+@media screen and (max-width:845px) {
+    .header {  
+        visibility:hidden;
+    }
+
+    .header {
+        visibility:hidden;
+    }
+}
+
+@media screen and (max-width:770px) {
+    /*
+    .header {
+        display:block; 
+    }
+
+    .header {
+        display:block; 
+    }
+    */
+}
+
